Adjust chart styling. - update chart dimensions - prevent chart text from scaling on smaller screens - make values flush with the hover card edge on smaller screens

--- a/src/global.scss
+++ b/src/global.scss
@@ -722,6 +722,11 @@ div.next-steps-item > h3 {
 @media (max-width: g.$media-breakpoint) {
   .chart-hover-card {
     display: block;
+    margin-top: 15px;
+  }
+
+  .chart-hover-card-name {
+    width: 100%;
   }
 
   .chart-hover-card.inactive {
